Fix the double scroll bar

--- a/src/assets/css/material-dashboard-react.css
+++ b/src/assets/css/material-dashboard-react.css
@@ -1,7 +1,7 @@
 body {
-	overflow: auto !important;
-	padding: 0 !important;
-	margin: 0 !important;
+	overflow: auto;
+	padding: 0;
+	margin: 0;
 }
 header {
 	padding: 0 !important;
